# MeowMeow

./: .gitattributes  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: static.yml
models/: meowmeow.keras
presentation/: MeowMeow.txt  slides.html  slides.md  visu.html
src/meowmeow/: __init__.py  __main__.py  dataset.py  model.py
